--- a/views/home.html
+++ b/views/home.html
@@ -42,7 +42,7 @@
         </section>
         <main>
             <section class="last-visit">
-                <h3>Basado en tu última visita</h3>
+                <h3 class="headline">Basado en tu última visita</h3>
                 <div class="products">
                     <article>
                         <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
@@ -83,7 +83,7 @@
                 </div>
             </section>
             <section class="offers">
-                <h3>Ofertas</h3>
+                <h3 class="headline">Ofertas</h3>
                 <div class="products">
                     <article>
                         <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
@@ -125,7 +125,37 @@
             </section>
         </main>
         <footer>
-            
+            <div class="foot-card">
+                <i class="fa-solid fa-credit-card"></i>
+                <p>
+                    <b>Pagá con tarjeta o en efectivo</b>
+                </p>
+                <p>
+                    Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!
+                </p>
+            </div>
+            <div class="foot-card">
+                <p>
+                    <b>Envío gratis desde $ 2.500</b>
+                </p>
+                <p>
+                    Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.
+                </p>
+            </div>
+            <div class="foot-card">
+                <p>
+                    <b>Seguridad, de principio a fin</b>
+                </p>
+                <p>
+                    ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+porque estás siempre protegid@.
+                </p>
+            </div>
+            <div class="foot-copy">
+                <p><b>Copyright © 1999-2020 MercadoLiebre S.R.L.</b></p>
+            </div>
         </footer>
         
     </body>
