--- a/views/login.html
+++ b/views/login.html
@@ -39,11 +39,17 @@
         </header>
         
         <main>
-           <form action="menu" method="post">
-            <input type:"text" name:"user" placeholder="Nombre de Usuario">
-            <input type:"password" name:"password" placeholder="Contraseña">
-            <button type:"submit" name:"submit" placeholder="Enviar" href="/home.html">
-           </form>
+            <section style="
+                display: flex;
+                justify-content: center;
+            ">
+                <form action="menu" method="post" class="form-login">
+                    <input type:"text" name:"user" placeholder="Nombre de Usuario"><br>
+                    <input type:"password" name:"password" placeholder="Contraseña"><br>
+                    <button type:"submit" name:"submit" placeholder="Enviar" href="/home.html" class="btn-ingresar">Ingresar</button>
+                </form>
+            </section>
+           
         </main>
         <footer>
             
